# promptcloak

./: .dockerignore  .gitignore  AGENTS.md  AGENTS_DEPLOY.md  AGENTS_MONITOR.md  AGENTS_TESTING.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml  highlight.js  index.html  prompt.js  pyproject.toml  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
charts/promptcloak/: Chart.yaml  values.yaml
charts/promptcloak/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
examples/: codex-openrouter-promptcloak.config.toml  promptcloak-openrouter.config.yaml
scripts/: audit_secrets.py  check_release.py
site/: PROMPT.md  index.html  prompt.js  styles.css
site/icons/: NOTICE.md
src/promptcloak/: __init__.py  asgi.py  audit.py  cli.py  compat.py  config.py  library.py  patterns.py  proxy.py  redaction.py  security.py  version.py
tests/: fixtures.py  test_audit.py  test_cli.py  test_compat.py  test_config.py  test_docs.py  test_e2e.py  test_examples.py  test_library.py  test_proxy.py  test_redaction.py  test_security.py
