[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "promptcloak"
version = "0.1.5"
description = "Local OpenAI-compatible proxy and Python library for redacting secrets before prompts leave your machine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "PromptCloak contributors" }]
keywords = ["openai", "proxy", "redaction", "secrets", "privacy", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "bc-detect-secrets==1.5.43",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.0",
  "ruff>=0.8.0",
]

[project.scripts]
promptcloak = "promptcloak.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promptcloak"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
