[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "promptcloak"
version = "0.1.7"
description = "Local OpenAI-compatible proxy and Python library for redacting secrets before prompts leave your machine."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "PromptCloak contributors" }]
keywords = ["openai", "proxy", "redaction", "secrets", "privacy", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "bc-detect-secrets==1.5.47",
  "cryptography>=49.0.0",
  "fastapi>=0.139.0",
  "httpx>=0.28.1",
  "pydantic>=2.13.4",
  "pyyaml>=6.0.3",
  "typer>=0.27.0",
  "uvicorn[standard]>=0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "respx>=0.23.1",
  "ruff>=0.15.21",
]

[project.scripts]
promptcloak = "promptcloak.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promptcloak"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
